--- a/AIDS/Expt1/Expt1.ipynb
+++ b/AIDS/Expt1/Expt1.ipynb
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1170,6 +1170,7 @@
        "      <th>genre</th>\n",
        "      <th>revenue</th>\n",
        "      <th>runtime</th>\n",
+       "      <th>Dummy</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1184,6 +1185,7 @@
        "      <td>['Science Fiction', 'Action', 'Adventure']</td>\n",
        "      <td>424000000</td>\n",
        "      <td>97.0</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1196,6 +1198,7 @@
        "      <td>['Action', 'Adventure', 'Science Fiction', 'Fa...</td>\n",
        "      <td>165000000</td>\n",
        "      <td>157.0</td>\n",
+       "      <td>0.778947</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1208,6 +1211,7 @@
        "      <td>['Action', 'Adventure', 'Science Fiction']</td>\n",
        "      <td>331116356</td>\n",
        "      <td>155.0</td>\n",
+       "      <td>0.778947</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1220,6 +1224,7 @@
        "      <td>['Action', 'Crime', 'Thriller']</td>\n",
        "      <td>0</td>\n",
        "      <td>127.0</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1232,9 +1237,11 @@
        "      <td>['Comedy', 'Action', 'Adventure', 'Science Fic...</td>\n",
        "      <td>331096766</td>\n",
        "      <td>115.0</td>\n",
+       "      <td>0.778947</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -1256,6 +1263,7 @@
        "      <td>['Adventure', 'Animation', 'Comedy', 'Science ...</td>\n",
        "      <td>0</td>\n",
        "      <td>23.0</td>\n",
+       "      <td>0.778947</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9996</th>\n",
@@ -1268,6 +1276,7 @@
        "      <td>['History', 'Drama', 'Music']</td>\n",
        "      <td>0</td>\n",
        "      <td>116.0</td>\n",
+       "      <td>0.778947</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9997</th>\n",
@@ -1280,6 +1289,7 @@
        "      <td>['Drama', 'Action', 'Thriller', 'War']</td>\n",
        "      <td>0</td>\n",
        "      <td>101.0</td>\n",
+       "      <td>0.778947</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9998</th>\n",
@@ -1292,6 +1302,7 @@
        "      <td>['Drama', 'Music', 'Romance']</td>\n",
        "      <td>20710513</td>\n",
        "      <td>85.0</td>\n",
+       "      <td>0.778947</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9999</th>\n",
@@ -1304,10 +1315,11 @@
        "      <td>['Drama', 'Mystery', 'Thriller']</td>\n",
        "      <td>0</td>\n",
        "      <td>113.0</td>\n",
+       "      <td>0.778947</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10000 rows × 9 columns</p>\n",
+       "<p>10000 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1337,23 +1349,36 @@
        "9998           7.4         990   \n",
        "9999           6.0         304   \n",
        "\n",
-       "                                                  genre    revenue  runtime  \n",
-       "0            ['Science Fiction', 'Action', 'Adventure']  424000000     97.0  \n",
-       "1     ['Action', 'Adventure', 'Science Fiction', 'Fa...  165000000    157.0  \n",
-       "2            ['Action', 'Adventure', 'Science Fiction']  331116356    155.0  \n",
-       "3                       ['Action', 'Crime', 'Thriller']          0    127.0  \n",
-       "4     ['Comedy', 'Action', 'Adventure', 'Science Fic...  331096766    115.0  \n",
-       "...                                                 ...        ...      ...  \n",
-       "9995  ['Adventure', 'Animation', 'Comedy', 'Science ...          0     23.0  \n",
-       "9996                      ['History', 'Drama', 'Music']          0    116.0  \n",
-       "9997             ['Drama', 'Action', 'Thriller', 'War']          0    101.0  \n",
-       "9998                      ['Drama', 'Music', 'Romance']   20710513     85.0  \n",
-       "9999                   ['Drama', 'Mystery', 'Thriller']          0    113.0  \n",
+       "                                                  genre    revenue  runtime  \\\n",
+       "0            ['Science Fiction', 'Action', 'Adventure']  424000000     97.0   \n",
+       "1     ['Action', 'Adventure', 'Science Fiction', 'Fa...  165000000    157.0   \n",
+       "2            ['Action', 'Adventure', 'Science Fiction']  331116356    155.0   \n",
+       "3                       ['Action', 'Crime', 'Thriller']          0    127.0   \n",
+       "4     ['Comedy', 'Action', 'Adventure', 'Science Fic...  331096766    115.0   \n",
+       "...                                                 ...        ...      ...   \n",
+       "9995  ['Adventure', 'Animation', 'Comedy', 'Science ...          0     23.0   \n",
+       "9996                      ['History', 'Drama', 'Music']          0    116.0   \n",
+       "9997             ['Drama', 'Action', 'Thriller', 'War']          0    101.0   \n",
+       "9998                      ['Drama', 'Music', 'Romance']   20710513     85.0   \n",
+       "9999                   ['Drama', 'Mystery', 'Thriller']          0    113.0   \n",
        "\n",
-       "[10000 rows x 9 columns]"
+       "         Dummy  \n",
+       "0     0.000000  \n",
+       "1     0.778947  \n",
+       "2     0.778947  \n",
+       "3     1.000000  \n",
+       "4     0.778947  \n",
+       "...        ...  \n",
+       "9995  0.778947  \n",
+       "9996  0.778947  \n",
+       "9997  0.778947  \n",
+       "9998  0.778947  \n",
+       "9999  0.778947  \n",
+       "\n",
+       "[10000 rows x 10 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1365,230 +1390,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>original_language</th>\n",
-       "      <th>original_title</th>\n",
-       "      <th>popularity</th>\n",
-       "      <th>release_date</th>\n",
-       "      <th>vote_average</th>\n",
-       "      <th>vote_count</th>\n",
-       "      <th>genre</th>\n",
-       "      <th>revenue</th>\n",
-       "      <th>runtime</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>en</td>\n",
-       "      <td>Venom: Let There Be Carnage</td>\n",
-       "      <td>5401.308</td>\n",
-       "      <td>2021-09-30</td>\n",
-       "      <td>6.8</td>\n",
-       "      <td>1736</td>\n",
-       "      <td>['Science Fiction', 'Action', 'Adventure']</td>\n",
-       "      <td>424000000</td>\n",
-       "      <td>97.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>en</td>\n",
-       "      <td>Eternals</td>\n",
-       "      <td>3365.535</td>\n",
-       "      <td>2021-11-03</td>\n",
-       "      <td>7.1</td>\n",
-       "      <td>622</td>\n",
-       "      <td>['Action', 'Adventure', 'Science Fiction', 'Fa...</td>\n",
-       "      <td>165000000</td>\n",
-       "      <td>157.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>en</td>\n",
-       "      <td>Dune</td>\n",
-       "      <td>2911.423</td>\n",
-       "      <td>2021-09-15</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>3632</td>\n",
-       "      <td>['Action', 'Adventure', 'Science Fiction']</td>\n",
-       "      <td>331116356</td>\n",
-       "      <td>155.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>en</td>\n",
-       "      <td>Army of Thieves</td>\n",
-       "      <td>2552.437</td>\n",
-       "      <td>2021-10-27</td>\n",
-       "      <td>6.9</td>\n",
-       "      <td>555</td>\n",
-       "      <td>['Action', 'Crime', 'Thriller']</td>\n",
-       "      <td>0</td>\n",
-       "      <td>127.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>en</td>\n",
-       "      <td>Free Guy</td>\n",
-       "      <td>1850.470</td>\n",
-       "      <td>2021-08-11</td>\n",
-       "      <td>7.8</td>\n",
-       "      <td>3493</td>\n",
-       "      <td>['Comedy', 'Action', 'Adventure', 'Science Fic...</td>\n",
-       "      <td>331096766</td>\n",
-       "      <td>115.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9995</th>\n",
-       "      <td>en</td>\n",
-       "      <td>A Grand Day Out</td>\n",
-       "      <td>9.266</td>\n",
-       "      <td>1990-05-18</td>\n",
-       "      <td>7.5</td>\n",
-       "      <td>594</td>\n",
-       "      <td>['Adventure', 'Animation', 'Comedy', 'Science ...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>23.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9996</th>\n",
-       "      <td>en</td>\n",
-       "      <td>El cantante</td>\n",
-       "      <td>10.417</td>\n",
-       "      <td>2006-09-12</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>80</td>\n",
-       "      <td>['History', 'Drama', 'Music']</td>\n",
-       "      <td>0</td>\n",
-       "      <td>116.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9997</th>\n",
-       "      <td>en</td>\n",
-       "      <td>How I Live Now</td>\n",
-       "      <td>9.520</td>\n",
-       "      <td>2013-09-10</td>\n",
-       "      <td>6.6</td>\n",
-       "      <td>705</td>\n",
-       "      <td>['Drama', 'Action', 'Thriller', 'War']</td>\n",
-       "      <td>0</td>\n",
-       "      <td>101.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9998</th>\n",
-       "      <td>en</td>\n",
-       "      <td>Once</td>\n",
-       "      <td>9.267</td>\n",
-       "      <td>2007-03-23</td>\n",
-       "      <td>7.4</td>\n",
-       "      <td>990</td>\n",
-       "      <td>['Drama', 'Music', 'Romance']</td>\n",
-       "      <td>20710513</td>\n",
-       "      <td>85.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9999</th>\n",
-       "      <td>en</td>\n",
-       "      <td>Manhattan Night</td>\n",
-       "      <td>9.273</td>\n",
-       "      <td>2016-05-20</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>304</td>\n",
-       "      <td>['Drama', 'Mystery', 'Thriller']</td>\n",
-       "      <td>0</td>\n",
-       "      <td>113.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>10000 rows × 9 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     original_language               original_title  popularity release_date  \\\n",
-       "0                   en  Venom: Let There Be Carnage    5401.308   2021-09-30   \n",
-       "1                   en                     Eternals    3365.535   2021-11-03   \n",
-       "2                   en                         Dune    2911.423   2021-09-15   \n",
-       "3                   en              Army of Thieves    2552.437   2021-10-27   \n",
-       "4                   en                     Free Guy    1850.470   2021-08-11   \n",
-       "...                ...                          ...         ...          ...   \n",
-       "9995                en              A Grand Day Out       9.266   1990-05-18   \n",
-       "9996                en                  El cantante      10.417   2006-09-12   \n",
-       "9997                en               How I Live Now       9.520   2013-09-10   \n",
-       "9998                en                         Once       9.267   2007-03-23   \n",
-       "9999                en              Manhattan Night       9.273   2016-05-20   \n",
-       "\n",
-       "      vote_average  vote_count  \\\n",
-       "0              6.8        1736   \n",
-       "1              7.1         622   \n",
-       "2              8.0        3632   \n",
-       "3              6.9         555   \n",
-       "4              7.8        3493   \n",
-       "...            ...         ...   \n",
-       "9995           7.5         594   \n",
-       "9996           7.0          80   \n",
-       "9997           6.6         705   \n",
-       "9998           7.4         990   \n",
-       "9999           6.0         304   \n",
-       "\n",
-       "                                                  genre    revenue  runtime  \n",
-       "0            ['Science Fiction', 'Action', 'Adventure']  424000000     97.0  \n",
-       "1     ['Action', 'Adventure', 'Science Fiction', 'Fa...  165000000    157.0  \n",
-       "2            ['Action', 'Adventure', 'Science Fiction']  331116356    155.0  \n",
-       "3                       ['Action', 'Crime', 'Thriller']          0    127.0  \n",
-       "4     ['Comedy', 'Action', 'Adventure', 'Science Fic...  331096766    115.0  \n",
-       "...                                                 ...        ...      ...  \n",
-       "9995  ['Adventure', 'Animation', 'Comedy', 'Science ...          0     23.0  \n",
-       "9996                      ['History', 'Drama', 'Music']          0    116.0  \n",
-       "9997             ['Drama', 'Action', 'Thriller', 'War']          0    101.0  \n",
-       "9998                      ['Drama', 'Music', 'Romance']   20710513     85.0  \n",
-       "9999                   ['Drama', 'Mystery', 'Thriller']          0    113.0  \n",
-       "\n",
-       "[10000 rows x 9 columns]"
+       "original_language     0\n",
+       "original_title        0\n",
+       "popularity            0\n",
+       "release_date         38\n",
+       "vote_average          0\n",
+       "vote_count            0\n",
+       "genre                 0\n",
+       "revenue               0\n",
+       "runtime               0\n",
+       "Dummy                 0\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_df.isnull().sum()\n",
-    "new_df"
+    "new_df.isnull().sum()\n"
    ]
   },
   {
@@ -2896,13 +2723,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.71578947, 0.2425    ],\n",
+       "       [0.74736842, 0.3925    ],\n",
+       "       [0.84210526, 0.3875    ],\n",
+       "       ...,\n",
+       "       [0.69473684, 0.2525    ],\n",
+       "       [0.77894737, 0.2125    ],\n",
+       "       [0.63157895, 0.2825    ]])"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "scalar=MinMaxScaler()\n",
     "scalar.fit(X_data)\n",
-    "new_data=scalar.transform(X_data)"
+    "new_data=scalar.transform(X_data)\n",
+    "new_data"
    ]
   },
   {
@@ -2927,9 +2772,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "new_data"
-   ]
+   "source": []
   }
  ],
  "metadata": {
