--- a/AIDS/Expt4/Expt4.ipynb
+++ b/AIDS/Expt4/Expt4.ipynb
@@ -708,14 +708,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Raghav\\AppData\\Local\\Temp\\ipykernel_18300\\1932424350.py:1: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "C:\\Users\\Raghav\\AppData\\Local\\Temp\\ipykernel_20376\\1932424350.py:1: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
       "  pearsoncorr = data.corr(method='pearson')\n"
      ]
     },
@@ -787,7 +787,7 @@
        "days        -0.003145 -0.086987     0.017977  1.000000"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +839,7 @@
        "-0.21290720280106135"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +860,7 @@
        "-0.24757288489839002"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +880,7 @@
        "-0.15795472978935396"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,14 +891,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Raghav\\AppData\\Local\\Temp\\ipykernel_18300\\425438171.py:2: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "C:\\Users\\Raghav\\AppData\\Local\\Temp\\ipykernel_20376\\425438171.py:2: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
       "  corr=data.corr(method='kendall')\n"
      ]
     },
@@ -970,7 +970,7 @@
        "days        -0.002357 -0.125884     0.012277  1.000000"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +992,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1029,6 +1029,466 @@
     "contingency=pd.crosstab(data['no_of_pages'],data['days'])\n",
     "c,p,dof,expected=chi2_contingency(contingency)\n",
     "print(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>days</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>11</th>\n",
+       "      <th>12</th>\n",
+       "      <th>13</th>\n",
+       "      <th>14</th>\n",
+       "      <th>15</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>no_of_pages</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>12</td>\n",
+       "      <td>25</td>\n",
+       "      <td>21</td>\n",
+       "      <td>14</td>\n",
+       "      <td>24</td>\n",
+       "      <td>16</td>\n",
+       "      <td>20</td>\n",
+       "      <td>22</td>\n",
+       "      <td>21</td>\n",
+       "      <td>17</td>\n",
+       "      <td>17</td>\n",
+       "      <td>22</td>\n",
+       "      <td>12</td>\n",
+       "      <td>16</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>21</td>\n",
+       "      <td>13</td>\n",
+       "      <td>9</td>\n",
+       "      <td>16</td>\n",
+       "      <td>15</td>\n",
+       "      <td>14</td>\n",
+       "      <td>17</td>\n",
+       "      <td>18</td>\n",
+       "      <td>21</td>\n",
+       "      <td>14</td>\n",
+       "      <td>11</td>\n",
+       "      <td>16</td>\n",
+       "      <td>17</td>\n",
+       "      <td>21</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>74</td>\n",
+       "      <td>89</td>\n",
+       "      <td>104</td>\n",
+       "      <td>76</td>\n",
+       "      <td>69</td>\n",
+       "      <td>90</td>\n",
+       "      <td>90</td>\n",
+       "      <td>102</td>\n",
+       "      <td>75</td>\n",
+       "      <td>65</td>\n",
+       "      <td>95</td>\n",
+       "      <td>89</td>\n",
+       "      <td>65</td>\n",
+       "      <td>91</td>\n",
+       "      <td>71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>81</td>\n",
+       "      <td>72</td>\n",
+       "      <td>78</td>\n",
+       "      <td>84</td>\n",
+       "      <td>79</td>\n",
+       "      <td>82</td>\n",
+       "      <td>82</td>\n",
+       "      <td>94</td>\n",
+       "      <td>83</td>\n",
+       "      <td>95</td>\n",
+       "      <td>83</td>\n",
+       "      <td>66</td>\n",
+       "      <td>96</td>\n",
+       "      <td>88</td>\n",
+       "      <td>85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>86</td>\n",
+       "      <td>92</td>\n",
+       "      <td>84</td>\n",
+       "      <td>80</td>\n",
+       "      <td>100</td>\n",
+       "      <td>76</td>\n",
+       "      <td>92</td>\n",
+       "      <td>93</td>\n",
+       "      <td>73</td>\n",
+       "      <td>82</td>\n",
+       "      <td>78</td>\n",
+       "      <td>81</td>\n",
+       "      <td>71</td>\n",
+       "      <td>83</td>\n",
+       "      <td>89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>68</td>\n",
+       "      <td>82</td>\n",
+       "      <td>68</td>\n",
+       "      <td>75</td>\n",
+       "      <td>95</td>\n",
+       "      <td>84</td>\n",
+       "      <td>72</td>\n",
+       "      <td>84</td>\n",
+       "      <td>66</td>\n",
+       "      <td>99</td>\n",
+       "      <td>89</td>\n",
+       "      <td>82</td>\n",
+       "      <td>106</td>\n",
+       "      <td>84</td>\n",
+       "      <td>78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>77</td>\n",
+       "      <td>78</td>\n",
+       "      <td>91</td>\n",
+       "      <td>79</td>\n",
+       "      <td>78</td>\n",
+       "      <td>80</td>\n",
+       "      <td>77</td>\n",
+       "      <td>73</td>\n",
+       "      <td>90</td>\n",
+       "      <td>84</td>\n",
+       "      <td>73</td>\n",
+       "      <td>92</td>\n",
+       "      <td>78</td>\n",
+       "      <td>102</td>\n",
+       "      <td>85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>15</td>\n",
+       "      <td>17</td>\n",
+       "      <td>14</td>\n",
+       "      <td>21</td>\n",
+       "      <td>19</td>\n",
+       "      <td>15</td>\n",
+       "      <td>5</td>\n",
+       "      <td>18</td>\n",
+       "      <td>10</td>\n",
+       "      <td>15</td>\n",
+       "      <td>11</td>\n",
+       "      <td>11</td>\n",
+       "      <td>11</td>\n",
+       "      <td>17</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>24</td>\n",
+       "      <td>13</td>\n",
+       "      <td>15</td>\n",
+       "      <td>20</td>\n",
+       "      <td>17</td>\n",
+       "      <td>24</td>\n",
+       "      <td>15</td>\n",
+       "      <td>13</td>\n",
+       "      <td>22</td>\n",
+       "      <td>14</td>\n",
+       "      <td>24</td>\n",
+       "      <td>19</td>\n",
+       "      <td>18</td>\n",
+       "      <td>23</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>19</td>\n",
+       "      <td>16</td>\n",
+       "      <td>13</td>\n",
+       "      <td>15</td>\n",
+       "      <td>17</td>\n",
+       "      <td>18</td>\n",
+       "      <td>14</td>\n",
+       "      <td>24</td>\n",
+       "      <td>23</td>\n",
+       "      <td>13</td>\n",
+       "      <td>15</td>\n",
+       "      <td>26</td>\n",
+       "      <td>16</td>\n",
+       "      <td>14</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>11</td>\n",
+       "      <td>14</td>\n",
+       "      <td>12</td>\n",
+       "      <td>14</td>\n",
+       "      <td>21</td>\n",
+       "      <td>12</td>\n",
+       "      <td>17</td>\n",
+       "      <td>12</td>\n",
+       "      <td>14</td>\n",
+       "      <td>15</td>\n",
+       "      <td>17</td>\n",
+       "      <td>12</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>21</td>\n",
+       "      <td>9</td>\n",
+       "      <td>18</td>\n",
+       "      <td>23</td>\n",
+       "      <td>23</td>\n",
+       "      <td>11</td>\n",
+       "      <td>13</td>\n",
+       "      <td>21</td>\n",
+       "      <td>16</td>\n",
+       "      <td>18</td>\n",
+       "      <td>14</td>\n",
+       "      <td>17</td>\n",
+       "      <td>14</td>\n",
+       "      <td>20</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>16</td>\n",
+       "      <td>15</td>\n",
+       "      <td>17</td>\n",
+       "      <td>9</td>\n",
+       "      <td>23</td>\n",
+       "      <td>12</td>\n",
+       "      <td>18</td>\n",
+       "      <td>14</td>\n",
+       "      <td>20</td>\n",
+       "      <td>17</td>\n",
+       "      <td>16</td>\n",
+       "      <td>17</td>\n",
+       "      <td>24</td>\n",
+       "      <td>19</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>17</td>\n",
+       "      <td>16</td>\n",
+       "      <td>11</td>\n",
+       "      <td>15</td>\n",
+       "      <td>9</td>\n",
+       "      <td>14</td>\n",
+       "      <td>15</td>\n",
+       "      <td>17</td>\n",
+       "      <td>10</td>\n",
+       "      <td>18</td>\n",
+       "      <td>21</td>\n",
+       "      <td>18</td>\n",
+       "      <td>13</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>18</td>\n",
+       "      <td>18</td>\n",
+       "      <td>5</td>\n",
+       "      <td>18</td>\n",
+       "      <td>22</td>\n",
+       "      <td>18</td>\n",
+       "      <td>14</td>\n",
+       "      <td>13</td>\n",
+       "      <td>16</td>\n",
+       "      <td>18</td>\n",
+       "      <td>15</td>\n",
+       "      <td>19</td>\n",
+       "      <td>19</td>\n",
+       "      <td>24</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>17</td>\n",
+       "      <td>17</td>\n",
+       "      <td>16</td>\n",
+       "      <td>9</td>\n",
+       "      <td>17</td>\n",
+       "      <td>22</td>\n",
+       "      <td>11</td>\n",
+       "      <td>12</td>\n",
+       "      <td>22</td>\n",
+       "      <td>12</td>\n",
+       "      <td>23</td>\n",
+       "      <td>22</td>\n",
+       "      <td>15</td>\n",
+       "      <td>22</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>16</td>\n",
+       "      <td>11</td>\n",
+       "      <td>17</td>\n",
+       "      <td>12</td>\n",
+       "      <td>17</td>\n",
+       "      <td>17</td>\n",
+       "      <td>9</td>\n",
+       "      <td>18</td>\n",
+       "      <td>23</td>\n",
+       "      <td>19</td>\n",
+       "      <td>15</td>\n",
+       "      <td>20</td>\n",
+       "      <td>16</td>\n",
+       "      <td>22</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>21</td>\n",
+       "      <td>17</td>\n",
+       "      <td>12</td>\n",
+       "      <td>16</td>\n",
+       "      <td>11</td>\n",
+       "      <td>14</td>\n",
+       "      <td>17</td>\n",
+       "      <td>20</td>\n",
+       "      <td>12</td>\n",
+       "      <td>23</td>\n",
+       "      <td>18</td>\n",
+       "      <td>20</td>\n",
+       "      <td>15</td>\n",
+       "      <td>20</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>16</td>\n",
+       "      <td>10</td>\n",
+       "      <td>23</td>\n",
+       "      <td>18</td>\n",
+       "      <td>15</td>\n",
+       "      <td>15</td>\n",
+       "      <td>22</td>\n",
+       "      <td>20</td>\n",
+       "      <td>22</td>\n",
+       "      <td>23</td>\n",
+       "      <td>16</td>\n",
+       "      <td>20</td>\n",
+       "      <td>20</td>\n",
+       "      <td>15</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>16</td>\n",
+       "      <td>13</td>\n",
+       "      <td>19</td>\n",
+       "      <td>18</td>\n",
+       "      <td>22</td>\n",
+       "      <td>16</td>\n",
+       "      <td>22</td>\n",
+       "      <td>17</td>\n",
+       "      <td>15</td>\n",
+       "      <td>23</td>\n",
+       "      <td>25</td>\n",
+       "      <td>16</td>\n",
+       "      <td>24</td>\n",
+       "      <td>20</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "days         1   2    3   4    5   6   7    8   9   10  11  12   13   14  15\n",
+       "no_of_pages                                                                 \n",
+       "1            12  25   21  14   24  16  20   22  21  17  17  22   12   16  22\n",
+       "2            21  13    9  16   15  14  17   18  21  14  11  16   17   21  24\n",
+       "3            74  89  104  76   69  90  90  102  75  65  95  89   65   91  71\n",
+       "4            81  72   78  84   79  82  82   94  83  95  83  66   96   88  85\n",
+       "5            86  92   84  80  100  76  92   93  73  82  78  81   71   83  89\n",
+       "6            68  82   68  75   95  84  72   84  66  99  89  82  106   84  78\n",
+       "7            77  78   91  79   78  80  77   73  90  84  73  92   78  102  85\n",
+       "8            15  17   14  21   19  15   5   18  10  15  11  11   11   17  14\n",
+       "9            24  13   15  20   17  24  15   13  22  14  24  19   18   23  10\n",
+       "10           19  16   13  15   17  18  14   24  23  13  15  26   16   14  23\n",
+       "11           14  14   11  14   12  14  21   12  17  12  14  15   17   12  14\n",
+       "12           21   9   18  23   23  11  13   21  16  18  14  17   14   20  19\n",
+       "13           16  15   17   9   23  12  18   14  20  17  16  17   24   19   9\n",
+       "14           17  16   11  15    9  14  15   17  10  18  21  18   13   16  16\n",
+       "15           18  18    5  18   22  18  14   13  16  18  15  19   19   24  15\n",
+       "16           17  17   16   9   17  22  11   12  22  12  23  22   15   22  18\n",
+       "17           16  11   17  12   17  17   9   18  23  19  15  20   16   22  13\n",
+       "18           21  17   12  16   11  14  17   20  12  23  18  20   15   20  15\n",
+       "19           16  10   23  18   15  15  22   20  22  23  16  20   20   15  18\n",
+       "20           16  13   19  18   22  16  22   17  15  23  25  16   24   20  16"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "contingency"
    ]
   },
   {
